--- a/chatroom.html
+++ b/chatroom.html
@@ -5,10 +5,10 @@ ref: https://blog.csdn.net/wangzhanzheng/article/details/78603532
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>机器人客服</title>
+    <title>xwenyuan的聊天室</title>
 </head>
 <body>
-<h3>机器人客服</h3>
+<h3>xwenyuan的聊天室</h3>
 <div id="login">
     <div>
         <input id="server-ip" type="text" placeholder="服务器IP" value="127.0.0.1" autofocus="autofocus"/>
@@ -43,7 +43,7 @@ ref: https://blog.csdn.net/wangzhanzheng/article/details/78603532
         };
         ws.onmessage = function (evt) {
             if (typeof evt.data === "string") {
-                displayContent('server', evt.data);
+                displayContent(evt.data);
             }
             else {
                 $("msg-board").value += '\r\n' + '系统提示: 服务器返回了非文本消息';
@@ -63,7 +63,7 @@ ref: https://blog.csdn.net/wangzhanzheng/article/details/78603532
     function sendMsg() {
         var msg = $("client-message").value;
         ws.send(msg);
-        displayContent('client', msg);
+        // ws.send(JSON.stringify({'data': msg}));
     }
 
     function disconnectWS() {
@@ -78,8 +78,8 @@ ref: https://blog.csdn.net/wangzhanzheng/article/details/78603532
         disconnectWS();
     };
 
-    function displayContent(who, msg) {
-        $("msg-board").value += '\r\n' + new Date().Format("hh:mm:ss") + '\r\n' + who + ':  ' + msg;
+    function displayContent(msg) {
+        $("msg-board").value += '\r\n' + new Date().Format("hh:mm:ss") + '\r\n' + msg;
     }
 
     function $(id) {
